# hack-assembler

./: .gitignore  .travis.yml  Brewfile  Gemfile  LICENSE  README.md  hack-assembler.cabal  stack.yaml
.github/workflows/: bottle-and-publish.yml  build-and-publish.yml  build_and_publish.yml  main.yml  manual.yml
app/: Main.hs
automation/: DeployMain.hs  DeploySdistGithub.hs  MaybeTag.hs  UpdateHomebrewFormula.hs  bottle-and-upload.sh  deploy.hs  deploy.sh  gather-and-publish.sh  hello-github.sh  hello-travis.sh  install-homebrew-automation.sh  install-stack.sh  look-around.sh  tag-version.sh  travis-debug-build.sh  travis-deploy.sh  travis-install.sh  trigger-github-dispatch.sh  update_bottle.rb  update_formula.rb  update_formula_bottle.rb  update_formula_sdist.rb  version-as-num.sh  version.sh
resources/: two-and-three.asm
src/: CLI.hs  Formatter.hs  Lib.hs  Model.hs  Parser.hs  sample.asm
src/Automation/: Bintray.hs  CabalVersion.hs  Deploy.hs  GitCommands.hs  Github.hs  HomebrewFormula.hs  Misc.hs
test/: Spec.hs  TestPutBottle.hs  TestUpdateFormula.hs
