name:                hack-assembler
version:             0.1.1.5
synopsis:            An assembler for the Hack language
description:         A coursework project for nand2tetris
homepage:            https://github.com/easoncxz/hack-assembler
license:             GPL-3
license-file:        LICENSE
author:              Eason Chen
maintainer:          me@easoncxz.com
copyright:           2017 Eason Chen
category:            Education
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Parser
                     , Formatter
                     , Model
                     , Automation.Deploy
                     , Automation.Github
                     , Automation.GitCommands
                     , Automation.CabalVersion
                     , Automation.HomebrewFormula
                     , Automation.Misc
                     , Automation.Bintray
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers

                     -- Stuff for CI:
                     , turtle
                     , foldl
                     , system-filepath
                     , directory
                     , Cabal
                     , wreq
                     , lens
                     , lens-aeson
                     , aeson
                     , unordered-containers
                     , vector
                     , bytestring
                     , utf8-string
                     , uri-templater
                     , either
                     , optional-args
                     , string-conversions
                     , cryptohash
  default-language:    Haskell2010

executable hack-assembler
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hack-assembler
                     , text
  default-language:    Haskell2010

executable deploy-hack-assembler
  hs-source-dirs:      automation
  main-is:             DeployMain.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hack-assembler
                     , turtle
                     , text
  default-language:    Haskell2010

executable maybe-tag
  hs-source-dirs:      automation
  main-is:             MaybeTag.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hack-assembler
                     , turtle
                     , foldl
                     , text
  default-language:    Haskell2010

test-suite hack-assembler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TestUpdateFormula
                     , TestPutBottle
  build-depends:       base
                     , hack-assembler
                     , QuickCheck
                     , HUnit
                     , containers
                     , text
                     , bytestring
                     , heredoc
                     , turtle
                     , managed
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/easoncxz/hack-assembler
