name:                hack-assembler
version:             0.1.1.32
synopsis:            An assembler for the Hack language
description:         A coursework project for nand2tetris
homepage:            https://github.com/easoncxz/hack-assembler
license:             GPL-3
license-file:        LICENSE
author:              Eason Chen
maintainer:          me@easoncxz.com
copyright:           2017 Eason Chen
category:            Education
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , CLI
                     , Parser
                     , Formatter
                     , Model
  other-modules:       Paths_hack_assembler
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , Cabal

  default-language:    Haskell2010

executable hack-assembler
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hack-assembler
                     , text
                     , turtle
  default-language:    Haskell2010

test-suite hack-assembler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hack-assembler
                     , QuickCheck
                     , HUnit
                     , containers
                     , text
                     , bytestring
                     , heredoc
                     , turtle
                     , managed
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/easoncxz/hack-assembler
